--- a/CSS/dash.css
+++ b/CSS/dash.css
@@ -1337,3 +1337,18 @@ td {
   align-items: center;
   gap: 12px;
 }
+
+
+
+
+.chart-title {
+  font-weight: 600;
+  color: var(--negro-carbon);
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.08rem;
+  padding-bottom: 6px;
+  border-bottom: 3px solid var(--azul-petroleo); /* #003B5C */
+  border-left: 3px solid var(--azul-petroleo); /* #003B5C */
+  width: 100%;
+  margin-bottom: 12px;
+}
